Refactor code structure for improved readability and maintainability

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,14 +10,22 @@ DB_PASSWORD=123
 DB_HOST=localhost
 DB_PORT=5432
 
-# Email Configuration (SMTP)
+# Email Configuration
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
-EMAIL_HOST=smtp.gmail.com
+EMAIL_HOST=smtp-mail.outlook.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=tu_email@gmail.com
-EMAIL_HOST_PASSWORD=tu_contraseña_de_aplicacion_aqui
-DEFAULT_FROM_EMAIL=tu_email@gmail.com
+EMAIL_HOST_USER=tu_email@outlook.com
+EMAIL_HOST_PASSWORD=tu_contraseña_aqui
+DEFAULT_FROM_EMAIL=tu_email@outlook.com
+
+# Microsoft OAuth y Graph API
+USE_MICROSOFT_GRAPH=True
+MICROSOFT_CLIENT_ID=tu_application_client_id_aqui
+MICROSOFT_CLIENT_SECRET=tu_client_secret_aqui
+MICROSOFT_TENANT_ID=common
+MICROSOFT_AUTHORITY=https://login.microsoftonline.com/common
+MICROSOFT_REDIRECT_URI=http://localhost:8000/api/auth/microsoft/callback/
 
 # Celery
 CELERY_BROKER_URL=redis://localhost:6379/0
