--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,8 @@ psycopg2-binary>=2.9.10
 python-decouple==3.8
 celery==5.4.0
 redis==5.0.8
+
+# Microsoft Authentication and Graph API
+msal>=1.30.0
+django-allauth==0.63.3
+requests==2.31.0
