Fix: Configurar vercel.json para SPA de Quasar

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+  "buildCommand": "cd frontend && npm install && npx quasar build",
+  "outputDirectory": "frontend/dist/spa",
+  "routes": [
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
